RESULTS/AutoSpec/raw_results/out-4o-nla/11_0005/11_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/11_0005/11_merged.c:21:66: error: unterminated comment
   21 |     loop invariant x == a * y + a * z * (z^(c-1) - 1) / (z - 1); /* Arithmetic progression sum formula */;
      |                                                                  ^
